Results screen finished and displaying all info

--- a/Demo_TiltBall_mcmaceac/app/src/main/res/values/strings.xml
+++ b/Demo_TiltBall_mcmaceac/app/src/main/res/values/strings.xml
@@ -10,5 +10,7 @@
     <string name="paramlabelnumlapstext">Number of laps</string>
     <string name="button01text">OK</string>
     <string name="button03text">Exit</string>
+    <string name="button04text">Setup</string>
+    <string name="resultstitletext">Results</string>
 
 </resources>
